--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 						-->
 					</div>  
 
-				<!-- Footer -->
+				<!-- Footer 
 					<footer id="footer">
 						<section>
 							<form method="post" action="#">
@@ -189,6 +189,7 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
+								-->
 							</form>
 						</section>
 						<section class="split contact">
