--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								</ul>
 							</article>
 
-						<!-- Posts 
+						<!--Posts -->
 							<section class="posts">
 								<article>
 									<header>
@@ -77,12 +77,12 @@
 									<p>The dataset typically contains attributes such as patient demographics (age, gender), lifestyle factors (exercise frequency, diet quality, smoking, and alcohol consumption), and health conditions (BMI, blood pressure, chronic conditions, etc.). By segmenting data across age groups and health indicators,
 										 the dataset can provide a comprehensive view of how various lifestyle factors correlate with patient health metrics.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Steph3nOdm/Road-accident-" class="button">view project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-									
+									<!--
 										<h2><a href="#">Analyzing and Generating insights on the US Gun<br />
 										Violence using Power BI </a></h3>
 									</header>
@@ -235,4 +235,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
