--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Steph3n D' Analyst Portfolio<br />
 						</h1>
-						<p>Data analyst skilled in SQL, excel and Power Bi  <a href="https://x.com/steph3nodm">@Steph3n</a>
+						<p>Data analyst skilled in powerquery, excel and Power Bi  <a href="https://x.com/steph3nodm">@Steph3n</a>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -237,3 +237,4 @@
 	</body>
 
 </html>
+
